资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2/32bit/MT_API.h

MT_API INT32 __stdcall MT_Get_Optic_In_Single(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_In_All(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_Out_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Set_Optic_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Optic_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Get_Optic_Out_Single(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Optic_Out_All(INT32* pValue);
MT_API INT32 __stdcall MT_Get_OC_Out_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Set_OC_Out_Single(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_OC_Out_All(INT32 Value);
MT_API INT32 __stdcall MT_Get_OC_Out_Single(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_OC_Out_All(INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Home_Switch(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Encoder_Index(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Encoder_Home_Switch(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Mode_Home_Home_Zero(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Home_V(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Home_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Software_Limit_Neg_Value(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Software_Limit_Pos_Value(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Software_Limit_Enable(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Software_Limit_Disable(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Line_Axis(WORD AObj,INT32 Axis_ID0,INT32 Axis_ID1);
MT_API INT32 __stdcall MT_Set_Axis_Line_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Line_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Line_V(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Line_Run(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Line_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Line_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Line_Rel(WORD AObj,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Line_Abs(WORD AObj,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Line_Run_Rel(WORD AObj,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Line_Run_Abs(WORD AObj,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Get_Axis_Line_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Line_Status(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Line_Axis(WORD AObj,INT32* pID0,INT32* pID1);
MT_API INT32 __stdcall MT_Get_Axis_Line_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Line_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Line_V(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_AD_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_AD_Data(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Board_T(INT32* pValue);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Axis(WORD AObj,INT32 Axis_ID0,INT32 Axis_ID1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Acc(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Dec(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_V(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CCW_Run_Rel(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_R_CCW_Run_Abs(WORD AObj,INT32 AR,INT32 Axis_Target0,INT32 Axis_Target1);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Stop(WORD AObj);
MT_API INT32 __stdcall MT_Set_Axis_Circle_Halt(WORD AObj);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Status(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Axis(WORD AObj,INT32* pID0,INT32* pID1);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Acc(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_Dec(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_Axis_Circle_V(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Var_Num(INT32* pValue);
MT_API INT32 __stdcall MT_Get_PLC_Var_Data(WORD AObj,INT32* pValue);
MT_API INT32 __stdcall MT_Set_PLC_Var_Data(WORD AObj,INT32 Value);
MT_API INT32 __stdcall MT_Set_PLC_Pause(void);
MT_API INT32 __stdcall MT_Set_PLC_Stop(void);