资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/64bit/MT_API.cs


[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_In_Single(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_In_All(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_Out_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Optic_Out_Single(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Optic_Out_All(Int32 ADev,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_Out_Single(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Optic_Out_All(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_OC_Out_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_OC_Out_Single(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_OC_Out_All(Int32 ADev,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_OC_Out_Single(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_OC_Out_All(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Home_Switch(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Encoder_Index(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Encoder_Home_Switch(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Mode_Home_Home_Zero(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Home_V(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Home_Stop(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_Limit_Neg_Value(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_Limit_Pos_Value(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_Limit_Enable(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Software_Limit_Disable(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Axis(Int32 ADev,UInt16 AObj,Int32 Axis_ID0,Int32 Axis_ID1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Acc(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Dec(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_V(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Run(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Stop(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Halt(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Rel(Int32 ADev,UInt16 AObj,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Abs(Int32 ADev,UInt16 AObj,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Run_Rel(Int32 ADev,UInt16 AObj,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Line_Run_Abs(Int32 ADev,UInt16 AObj,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Line_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Line_Status(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Line_Axis(Int32 ADev,UInt16 AObj,ref Int32 pID0,ref Int32 pID1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Line_Acc(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Line_Dec(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Line_V(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_AD_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_AD_Data(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Board_T(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_Axis(Int32 ADev,UInt16 AObj,Int32 Axis_ID0,Int32 Axis_ID1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_Acc(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_Dec(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_V(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_R_CW_Run_Rel(Int32 ADev,UInt16 AObj,Int32 AR,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_R_CW_Run_Abs(Int32 ADev,UInt16 AObj,Int32 AR,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_R_CCW_Run_Rel(Int32 ADev,UInt16 AObj,Int32 AR,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_R_CCW_Run_Abs(Int32 ADev,UInt16 AObj,Int32 AR,Int32 Axis_Target0,Int32 Axis_Target1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_Stop(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_Axis_Circle_Halt(Int32 ADev,UInt16 AObj);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Circle_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Circle_Status(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Circle_Axis(Int32 ADev,UInt16 AObj,ref Int32 pID0,ref Int32 pID1);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Circle_Acc(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Circle_Dec(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_Axis_Circle_V(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_PLC_Var_Num(Int32 ADev,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Get_PLC_Var_Data(Int32 ADev,UInt16 AObj,ref Int32 pValue);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_PLC_Var_Data(Int32 ADev,UInt16 AObj,Int32 Value);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_PLC_Pause(Int32 ADev);

[DllImport("MT_API_Multi.dll",CharSet=CharSet.Ansi,CallingConvention=CallingConvention.StdCall)]
public static extern Int32 MT_Set_PLC_Stop(Int32 ADev);
